# BGS_Client

./: CMakeLists.txt
include/: Decoder.h  FromKeyBoard.h  FromServer.h  connectionHandler.h  fromKeyboard.h
src/: BGSclient.cpp  Decoder.cpp  FromKeyBoard.cpp  FromServer.cpp  connectionHandler.cpp  echoClient.cpp  fromKeyboard.cpp
